--- a/Tutorial_3.tex
+++ b/Tutorial_3.tex
@@ -108,7 +108,7 @@ and so by the same argument with unions the result follows.
 $$
     \limsup_n f_n = \inf_k \sup_{n\geq k} f_n
 $$
-and the result follows immediatly by putting $ \sup_{n \geq k} f_n $ in the previous result and noting that $ \sup_{n \geq k} f_n$ 
+and the result follows immediately by putting $ \sup_{n \geq k} f_n $ in the previous result and noting that $ \sup_{n \geq k} f_n$ 
 is measurable by the result for $ \sup$ .
 
 \subsubsection{$ \liminf_n f_n $}
