Removed numbering from equations

--- a/Assignment_1.tex
+++ b/Assignment_1.tex
@@ -75,12 +75,12 @@ where $ q = 2 $. Now suppose that $ x \in \partial C_k $ then the $ \circledast 
 \section{}
 \subsection{}
 Note that for $ E \in \mathcal{B} $
-\begin{align}
+\begin{align*}
     \left(f^{-1}(E)\right)^c &= \left(\{ x \in X : f(x) \in E \}\right)^c \\
     &= \{ x \in X : f(x) \not\in E \} \\
     &= \{ x \in X : f(x) \in E^c \} \\
     &= f^{-1}(E^c).
-\end{align}
+\end{align*}
 So if $ A \in \mathcal{A} $ then $ A^c \in \mathcal{A} $.
 
 Also note that for $ E_1, E_2, \ldots $ 
