--- a/Assignment_1.tex
+++ b/Assignment_1.tex
@@ -71,7 +71,7 @@ A partitioning of $ S $ such that $ \circledast $ holds for all $ n $ is given b
 \begin{align*}
     C_k = \Big( \frac{k(b_1 - a_1)}{q^n}, \frac{(k+1)(b_1 - a_1)}{q^n}\Big] \times \cdots \times \Big( \frac{k(b_d-a_d)}{q^n}, \frac{(k+1)(b_d-a_d)}{q^n} \Big]
 \end{align*}
-where $ q = 2 $. Now suppose that $ x \in \partial C_k $ then the $ \circledast $ would still hold when $ q = 3 $ but $ x \not\in \partial C_k $. If $ x \in \partial C_k $ even after choosing $ q = 3 $ that means that it is now on another boundary of the partition rectangle. It is easy to see that simply choosing higher prime values for $ q $ will eventually mean that $ x \not\in \partial C $.
+where $ q = 2 $. Now suppose that $ x \in \partial C_k $ then the $ \circledast $ would still hold when $ q = 3 $ but $ x \not\in \partial C_k $. If $ x \in \partial C_k $ even after choosing $ q = 3 $ that means that it is now on another boundary of the partition rectangle. It is easy to see that simply choosing higher prime values for $ q $ will eventually mean that $ x \not\in \partial C_k $.
 
 \section{}
 \subsection{}
