--- a/Assignment_2.tex
+++ b/Assignment_2.tex
@@ -1,6 +1,7 @@
 \documentclass{unswmaths}
 \usepackage{unswshortcuts}
 \usepackage{dsfont}
+\usepackage{fullpage}
 \begin{document}
 \author{Adam J. Gray}
 \title{Assignment 2}
@@ -71,7 +72,7 @@ Because the binomial distribution is just the convolution of identical independe
 
 If $ \nu $ is the Bernoulli measure and $ X $ has law $ \nu $ then 
 \begin{align}
-	\hat{\nu}(u) &= \mathbb{E}[ \exp(iuX)]
+	\hat{\nu}(u) &= \mathbb{E}[ \exp(iuX)] \\
 		&= \sum_{k \in \{ 0, 1\}} e^{iuk} \nu_{X}(k) \\
 		&=  pe^{iu} + (1 - p).
 \end{align}
@@ -95,6 +96,22 @@ and thus
 
 \subsection{}
 
+We wish to show that if $ p_n $ is a sequence in $ [0,1] $ such that $ p_n \downarrow 0 $ and $ np_n \lra \lambda $ then $ \mu_n \lra \nu $ in the weak sense where $ \mu_n = \operatorname{Bin}(n, p_n) $.
 
+Let $ f \in C_b $ then 
+\begin{align}
+	E[f(X_n)] &= \sum_{k=0}^n f(k) \mu_n(k) \\
+		&= \sum_{k=0}^n f(k) \mu_n(k) \\
+		&= \sum_{k=0}^n f(k) {n\choose k} p_n^k(1-p_n)^{n-k}
+\end{align}
+then
+\begin{align}
+	\lim_{n\lra\infty} E[f(X_n)] &= \lim_{n \lra \infty}\sum_{k=0}^n f(k) {n\choose k} p_n^k(1-p_n)^{n-k}
+\end{align}
+and
+\begin{align}
+	\mathbb{E}[f(Y)] &= f(x) \nu(x) \\
+		&= \sum_{k=0}^\infty f(k) \frac{\lambda^k}{k!} e^{-\lambda} \\
+\end{align}
 
 \end{document}
